Make message center label accessible via ChromeVox on lock screen.

Message center label on lock screen provides user with the information
that device needs to be unlocked for access to notifications. This
information needs to be announced by ChromeVox. Announcement for the
label is not needed in unlocked state. Message center should be dismissed
by pressing Esc on the keyboard.

* Make notification label focusable on lock screen so it gets announcement.
* Move accessibility node information to MessageCenterButtonBar, because
otherwise they are not available when needed.
* Move button bar title to MessageCenterButtonBar to avoid the round
trip to fetch it.
* Remove MessageScrollView because it is no longer needed.

Bug: 793330
Change-Id: Ida23d2557973cbcd182d7ea4d2ee3ebec5a100bc
Reviewed-on: https://chromium-review.googlesource.com/894990
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: Aga Wronska <agawronska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534095}
Former-commit-id: 871469bf2bd6618cf146c36886ecf4c821af45b8